recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:2: error: identifier expected but ')' found.
  void forward(100.)
                   ^